--- a/src/app/main-content/profile/user-settings/user-settings.component.scss
+++ b/src/app/main-content/profile/user-settings/user-settings.component.scss
@@ -22,7 +22,7 @@
       width: 70%;
     }
     > .number {
-      width: 30%
+      width: 30%;
     }
   }
   > .btns {
@@ -37,11 +37,22 @@
       width: 50%;
       padding: 16px;
       border-radius: 4px;
-      border:1px solid #4f4e4e;
-      background-color: #2F2F2F;
+      border: 1px solid #4f4e4e;
+      background-color: #2f2f2f;
       &:hover {
         background-color: #4f4e4e;
       }
+    }
+  }
+}
+
+.uploaded-vids-cont {
+  @include dFlex(row, flex-start, center);
+  margin-bottom: 20px;
+  font-size: 18px;
+  > span {
+    > .video-count {
+      color: #e50815;
     }
   }
 }
@@ -56,7 +67,6 @@ input[type="number"] {
   -moz-appearance: textfield;
   appearance: textfield;
 }
-
 
 // input {
 //   color: #ffffff ;
