--- a/src/app/main-content/profile/profile.component.scss
+++ b/src/app/main-content/profile/profile.component.scss
@@ -49,10 +49,6 @@ section {
 
         }
 
-
-
-
-
         > .right-nav {
             width: 70%;
             @include dFlex(column, flex-start, flex-start);
@@ -61,11 +57,10 @@ section {
                 margin-top: 12px
             }
         }
+
+        
     }
-
-    
 }
-
 
 /*Activeness*/
 
@@ -119,4 +114,25 @@ app-profile-header{
 span {
     color: #ffffff;
     font-family: 'Raleway', sans-serif;
+}
+
+.video-overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: 20;
+    @include dFlex(row, center, flex-start);
+    padding-top: 124px;
+    > .v-overlay-container {
+        height: 700px;
+        width: 900px;
+        background-color: rgba($color: #040404, $alpha: 1.0);
+        border: #141414 1px solid;
+        border-radius: 6px;
+        box-shadow: 15px 10px 10px -10px rgba(0, 0, 0, 0.5),
+                    -15px 10px 10px -10px rgba(0, 0, 0, 0.5);
+        //padding: 12px;
+    }
 }
