added video editing component, videos can now uploaded, edited and deleted. user settings can be edited too

--- a/src/app/main-content/main/main.component.html
+++ b/src/app/main-content/main/main.component.html
@@ -8,7 +8,7 @@
     </div> -->
     <div *ngIf="this.globals.isVidOpen()" class="video-overlay">
         <div class="v-overlay-container">
-            <app-videoplayer></app-videoplayer>
+            <app-videoplayer [isInMyVideos]="false"></app-videoplayer>
         </div>
     </div>
 </section>
