--- a/src/app/main-content/profile/profile.component.html
+++ b/src/app/main-content/profile/profile.component.html
@@ -38,6 +38,6 @@
 
 <div *ngIf="this.globals.isVidOpen()" class="video-overlay">
   <div class="v-overlay-container">
-      <app-videoplayer></app-videoplayer>
+      <app-videoplayer [isInMyVideos]="true"></app-videoplayer>
   </div>
 </div>
