added some some new texts for spinner at fiel upload, other spinner needs them too, some bugfixes

--- a/src/app/main-content/profile/file-upload/file-upload.component.html
+++ b/src/app/main-content/profile/file-upload/file-upload.component.html
@@ -88,5 +88,5 @@
   color="#fff"
   type="fire"
   [fullScreen]="true"
-  ><p style="color: white">Dein Video wird gerade hochgeladen...</p></ngx-spinner
+  ><p style="color: white">{{globals.videoUploadText()}}</p></ngx-spinner
 >
