--- a/src/app/main-content/slider-comp/slider-comp.component.scss
+++ b/src/app/main-content/slider-comp/slider-comp.component.scss
@@ -11,60 +11,68 @@ section {
     }
     > .scroll-container {
       position: relative;
-      @include dFlex(row, flex-start, center);
+      width: 100%;
+      overflow: hidden;
+      display: flex;
       > .content-container {
         display: flex;
-        align-items: center;
-        overflow-x: scroll;
-        scroll-behavior: smooth;
-        scrollbar-width: none; /* Firefox */
+        width: 100%;
+        transition: transform 0.5s ease-in-out;
         ::-webkit-scrollbar {
           display: none;
         }
-        > .item {
-          width: 450px;
-          height: 450px;
-          margin: 10px;
-          @include dFlex(row, center, center);
-          > .grow-shadow {
-            display: flex;
-            position: relative;
-            vertical-align: middle;
-            -webkit-transform: perspective(1px) translateZ(0);
-            transform: perspective(1px) translateZ(0);
-            box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-            -webkit-transition-duration: 0.3s;
-            transition-duration: 0.3s;
-            -webkit-transition-property: box-shadow, transform;
-            transition-property: box-shadow, transform;
-            border-radius: 4px;
-            &:hover {
-              box-shadow: 15px 10px 10px -10px rgba(0, 0, 0, 0.5),
-                -15px 10px 10px -10px rgba(0, 0, 0, 0.5);
-              -webkit-transform: scale(1.5);
-              transform: scale(1.5);
-              z-index: 10;
-            }
-          }
-          &:first-child {
-            .grow-shadow {
+        > .video-container {
+          @include dFlex(row, space-around, center);
+          width: 100%;
+          display: flex;
+          flex-shrink: 0;
+          > .item {
+            //width: 450px;
+            min-width: 200px;
+            max-width: 25%;
+            height: 450px;
+            margin: 10px;
+            @include dFlex(row, center, center);
+            > .grow-shadow {
+              display: flex;
+              position: relative;
+              vertical-align: middle;
+              -webkit-transform: perspective(1px) translateZ(0);
+              transform: perspective(1px) translateZ(0);
+              box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+              -webkit-transition-duration: 0.3s;
+              transition-duration: 0.3s;
+              -webkit-transition-property: box-shadow, transform;
+              transition-property: box-shadow, transform;
+              border-radius: 4px;
               &:hover {
                 box-shadow: 15px 10px 10px -10px rgba(0, 0, 0, 0.5),
                   -15px 10px 10px -10px rgba(0, 0, 0, 0.5);
-                -webkit-transform: scale(1.5) translateX(60px);
-                transform: scale(1.5) translateX(60px);
+                -webkit-transform: scale(1.5);
+                transform: scale(1.5);
                 z-index: 10;
               }
             }
-          }
-          &:last-child {
-            .grow-shadow {
-              &:hover {
-                box-shadow: 15px 10px 10px -10px rgba(0, 0, 0, 0.5),
-                  -15px 10px 10px -10px rgba(0, 0, 0, 0.5);
-                -webkit-transform: scale(1.5) translateX(-60px);
-                transform: scale(1.5) translateX(-60px);
-                z-index: 10;
+            &:first-child {
+              .grow-shadow {
+                &:hover {
+                  box-shadow: 15px 10px 10px -10px rgba(0, 0, 0, 0.5),
+                    -15px 10px 10px -10px rgba(0, 0, 0, 0.5);
+                  -webkit-transform: scale(1.5) translateX(60px);
+                  transform: scale(1.5) translateX(60px);
+                  z-index: 10;
+                }
+              }
+            }
+            &:last-child {
+              .grow-shadow {
+                &:hover {
+                  box-shadow: 15px 10px 10px -10px rgba(0, 0, 0, 0.5),
+                    -15px 10px 10px -10px rgba(0, 0, 0, 0.5);
+                  -webkit-transform: scale(1.5) translateX(-60px);
+                  transform: scale(1.5) translateX(-60px);
+                  z-index: 10;
+                }
               }
             }
           }
@@ -90,7 +98,7 @@ section {
           }
         }
         z-index: 1;
-        
+
         @include dFlex(row, center, center);
       }
     }
@@ -107,4 +115,29 @@ section {
 app-video-item {
   cursor: pointer;
   font-size: 12px;
+}
+
+
+
+
+
+
+
+/* Für kleinere Bildschirme */
+@media (max-width: 1280px) {
+  .item {
+    max-width: 33.33%; /* Zeigt 3 Items auf mittleren Bildschirmen */
+  }
+}
+
+@media (max-width: 960px) {
+  .item {
+    max-width: 50%; /* Zeigt 2 Items auf kleineren Bildschirmen */
+  }
+}
+
+@media (max-width: 600px) {
+  .item {
+    max-width: 100%; /* Zeigt 1 Item auf sehr kleinen Bildschirmen */
+  }
 }
