--- a/src/app/main-content/slider-comp/video-item/video-item.component.scss
+++ b/src/app/main-content/slider-comp/video-item/video-item.component.scss
@@ -13,6 +13,10 @@
     width: 350px;
     border-top-right-radius: 4px;
     border-top-left-radius: 4px;
+    box-shadow: 0px 20px 10px -5px rgba(0, 0, 0, 0.7), 
+                0px 10px 10px -5px rgba(0, 0, 0, 0.7),
+                0px 10px 10px -5px rgba(0, 0, 0, 0.7),
+                0px 10px 10px -5px rgba(0, 0, 0, 0.7),
   }
   > .info-cont {
     transition: all 0.3s ease-in-out;
