--- a/src/app/head/logged-header/logged-header.component.scss
+++ b/src/app/head/logged-header/logged-header.component.scss
@@ -3,6 +3,9 @@
 .header-cont {
   width: 100%;
   max-width: 1920px;
+  @media (max-width: 2000px) {
+    max-width: 1850px;
+  }
   z-index: 1000;
   position: fixed;
   background-color: #141414;
