--- a/src/app/main-content/slider-comp/video-item/video-item.component.html
+++ b/src/app/main-content/slider-comp/video-item/video-item.component.html
@@ -3,10 +3,10 @@
   <div [ngClass]="isHovered ? 'vis' : 'invis'" class="info-cont">
     <div class="info-head">
       <div><span>{{ videoItem.title }}</span></div>
-      <div><span>{{ videoItem.genre }}</span></div>
+      <div class="end"><span>{{ videoItem.genre }}</span></div>
     </div>
     <div class="description-foot">
-      <p>{{ videoItem.description }}</p>
+      <p>{{ formatVideoDuration(videoItem.duration) }}</p>
     </div>
   </div>
 </div>
