--- a/src/app/main-content/slider-comp/video-item/video-item.component.scss
+++ b/src/app/main-content/slider-comp/video-item/video-item.component.scss
@@ -22,10 +22,12 @@
     transition: all 0.3s ease-in-out;
     display: flex;
     flex-direction: column;
+    justify-content: flex-end;
     width: 100%;
-    background-color: #141414;
+    background-color: rgba(0, 0, 0, 0.3);
     color: #ffffff;
-    height: 80px;
+    margin-top: -200px;
+    height: 200px;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
     > .info-head {
@@ -33,6 +35,9 @@
       padding: 4px 6px;
       > div {
         width: 50%;
+      }
+      > .end {
+        @include dFlex(row, flex-end, center)
       }
     }
     > .description-foot {
