some fixes for video item style, added 480p string source algorithm for each video

--- a/src/app/main-content/videoplayer/videoplayer.component.html
+++ b/src/app/main-content/videoplayer/videoplayer.component.html
@@ -8,7 +8,7 @@
         </div>
     </div>
 
-    <video #videoFrame width="900" autoplay [muted]="true" (timeupdate)="updateProgressBar()" (loadedmetadata)="initializeVideo()">
+    <video #videoFrame autoplay [muted]="true" (timeupdate)="updateProgressBar()" (loadedmetadata)="initializeVideo()">
       <source
         src="{{ globals.currentOpenedVideo()?.video_file }}"
         type="video/mp4"
