--- a/src/app/authentication/landingpage/landingpage.component.html
+++ b/src/app/authentication/landingpage/landingpage.component.html
@@ -19,4 +19,13 @@
         }
     </div>
 
+    <ngx-spinner
+  bdColor="rgba(0, 0, 0, 0.8)"
+  size="medium"
+  color="#fff"
+  type="square-jelly-box"
+  [fullScreen]="true"
+  ><p style="color: white">Bitte einen Moment Geduld...</p></ngx-spinner
+>
+
 </section>
