--- a/src/app/main-content/videoplayer/videoplayer.component.scss
+++ b/src/app/main-content/videoplayer/videoplayer.component.scss
@@ -17,6 +17,7 @@
                 padding: 16px;
                 border-radius: 50%;
                 margin-left: 8px;
+                margin-top: 8px;
                 &:hover {
                     cursor: pointer;
                     background-color: rgba($color: #141414, $alpha: 0.8);
@@ -39,7 +40,6 @@
                 padding: 4px 16px;
                 max-width: 100%;
                 margin-bottom: 4px;
-                background-color: rgba($color: #000000, $alpha: 0.2);
             }
             > .play {
                 > button {
