added videoplayer to main comp

--- a/src/app/head/logged-header/logged-header.component.html
+++ b/src/app/head/logged-header/logged-header.component.html
@@ -7,9 +7,7 @@
     </div>
     <div class="menu">
       <span>Startseite</span>
-      <span>Filme</span>
-      <span>Serien</span>
-      <span>Platzhalter</span>
+      <span (click)="openUploadVideoComp()">Video hochladen</span>
     </div>
   </div>
 
